--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,43 @@
-opencv-python>=4.8.0
+# Dépendances pour production sur Render
+# Core dependencies
+opencv-python-headless==4.8.1.78  # Version headless pour serveur
 ultralytics>=8.0.0
 flask>=2.3.0
 flask-cors>=4.0.0
+
+# WSGI Server
+gunicorn>=21.2.0
+
+# Data processing
 pandas>=2.0.0
 numpy>=1.24.0
+
+# Visualization (optionnel sur serveur)
 matplotlib>=3.7.0
 seaborn>=0.12.0
+
+# Utilities
 werkzeug>=2.3.0
 Pillow>=10.0.0
+
+# Cloud storage (pour Render)
+boto3>=1.28.0  # Pour AWS S3 si besoin
+cloudinary>=1.34.0  # Alternative pour stockage images/vidéos
+
+# Database (si utilisation de PostgreSQL)
+psycopg2-binary>=2.9.7
+sqlalchemy>=2.0.0
+
+# Monitoring
+sentry-sdk[flask]>=1.32.0  # Pour tracking des erreurs
+
+# Cache
+redis>=5.0.0  # Si utilisation de Redis
+flask-caching>=2.0.2
+
+# Security
+python-dotenv>=1.0.0  # Pour variables d'environnement
+cryptography>=41.0.0
+
+# Performance
+gevent>=23.9.0  # Pour requêtes asynchrones
